# shizuku

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SIR.md
.github/workflows/: cmake-single-platform.yml  codeql.yml
app/: CMakeLists.txt
app/shizuku/: CMakeLists.txt  shizuku.cc
ir/flatten/: ir_elab_db.cc  ir_vertex.cc  ir_vertex.h
ir/folded/: ir_datatype_db.cc  ir_pool_db.cc  ir_vid_db.cc
ir/lib/: CMakeLists.txt
ir/private/: ir_datatype.cc  ir_db.cc  ir_db_impl.cc  ir_db_impl.h  ir_elab_db.h  ir_flat_obj.cc  ir_folded_obj.cc  ir_pool_db.cc  ir_pool_db.h  ir_top_db.cc  ir_top_db.h
ir/public/: ir_datatype.h  ir_datatype_db.h  ir_db.h  ir_def.h  ir_flat_obj.h  ir_folded_obj.h  ir_reader.h  ir_vid_db.h
ir/reader/: ir_reader.cc  ir_reader.l  ir_reader.y  ir_reader_lib.cc  ir_reader_lib.h
netlist/elab/: elaborator.cc  elaborator.h
netlist/flatten/: nl_elab_db.cc  nl_flat_obj.cc  nl_vertex.cc  nl_vertex.h
netlist/folded/: nl_base.h  nl_datatype.cc  nl_datatype_db.cc  nl_folded_obj.cc  nl_module.cc  nl_module.h  nl_netlist.cc  nl_pool_db.cc  nl_pool_db.h  nl_top_db.cc  nl_vid_db.cc
netlist/lib/: CMakeLists.txt
netlist/public/: netlist_def.h  netlist_reader.h  nl_base.h  nl_datatype.h  nl_datatype_db.h  nl_def.h  nl_elab_db.h  nl_flat_obj.h  nl_folded_obj.h  nl_module.h  nl_netlist.h  nl_pool_db.h  nl_top_db.h  nl_vid_db.h
netlist/reader/: netlist_reader.cc  netlist_reader.l  netlist_reader.y  netlist_reader_lib.cc  netlist_reader_lib.h  nl_reader.cc  nl_reader_lib.cc  nl_reader_lib.h
runtime/lib/: CMakeLists.txt
runtime/private/: queue.cc
test/: CMakeLists.txt
test/ir/: CMakeLists.txt  test.cc
test/netlist/: CMakeLists.txt  test.cc  test.nl
test/perf/: CMakeLists.txt  alloc_perf.cc
test/regr/cases/: caselist.txt  dangling.exp  dangling.nl  dangling.yaml
test/regr/cases/elab/dangling/: test.exp  test.nl
test/regr/cases/elab/link/: test.exp  test.yaml
test/regr/cases/elab/net-resolver/: test.exp  test.nl
test/regr/script/: regr.py
test/runtime/: CMakeLists.txt  test.cc
test/util/: CMakeLists.txt  test.cc
test/vid/: CMakeLists.txt  test.cc
util/lib/: CMakeLists.txt
util/private/: szk_dispatch.cc  szk_log.cc  szk_option.cc
util/public/: szk_assert.h  szk_deletable_vec.h  szk_dispatch.h  szk_foreach.h  szk_log.h  szk_object.h  szk_option.h  szk_parray.h  szk_pool.h  szk_wsq.h
vid/lib/: CMakeLists.txt
vid/private/: vid.cc  vid_db.cc  vid_db.h
vid/public/: vid.h
